--- a/MissionToMars/Templates/index.html
+++ b/MissionToMars/Templates/index.html
@@ -6,3 +6,76 @@
     <title>Mission to Mars</title>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
   </head>
+  <body>
+    <div class="container">
+  
+      <div class="jumbotron text-center">
+        <h1>Mission to Mars</h1>
+        <p><a class="btn btn-primary btn-lg" href="/scrape" role="button">Scrape Data</a></p>
+      </div>
+  
+      <div class="row">
+        <div class="col-md-12">
+            <h3 style="font-weight: bold; margin-top: 3px; margin-bottom: 3px;">Latest Mars News</h3>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-md-12">
+          <h4 style="margin-top: 3px; margin-bottom: 3px; font-weight: bold;">{{mars_scrape.title}}</h4>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-sm-12">
+          <h5 style="margin-top: 3px; margin-bottom: 3px;">{{mars_scrape.teaser}}</h5>
+        </div>
+      </div>
+      <div class="row" style="margin-top: 50px;">
+        <div class="col-md-6">
+          <div class="row">
+            <h3 style="font-weight: bold; margin-top: 3px; margin-bottom: 3px;">Featured Mars Image</h3>
+            <img src = "{{mars_scrape.featured_img_url}}" alt = "Mars Featured Image">
+          </div>
+        </div>
+        <div class="col-md-6">
+          <div class="row" style="padding-left: 100px;">
+            <h3 style="font-weight: bold; margin-top: 3px; margin-bottom: 3px;">Mars Facts</h3>
+            <table>{{mars_scrape.facts_df | safe}}</table>
+          </div>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-md-12">
+
+            <h3 style="font-weight: bold; margin-top: 60px; margin-bottom: 30px; text-align: center;">Mars Hemispheres</h3>
+
+            <hr style="width: 100%; height:1px;border-width:0;color:lightgray;background-color:lightgray; margin-bottom: 20px;">
+        </div> 
+      </div>
+      <div class="row" >
+        <div class="col-md-2" style="border: 2px lightgrey solid; position:relative; left: 100px;">
+          <img src = "{{mars_scrape.hemi_image_title[0]['img_url']}}" style="width: 100%;" alt = "hemisphere">
+          <h4 style="margin-bottom: 20px; margin-top: 25px; font-weight: bold; width: 90%;">{{mars_scrape.hemi_image_title[0]['title']}}</h4>
+        </div>
+        <div class="col-md-2" style="border: 2px lightgrey solid; position: relative; left: 150px;">
+          <img src = "{{mars_scrape.hemi_image_title[1]['img_url']}}" style="width: 100%;" alt = "hemisphere">
+          <h4 style="margin-bottom: 20px; margin-top: 25px; font-weight: bold; width: 90%;">{{mars_scrape.hemi_image_title[1]['title']}}</h4>
+        </div>
+        <div class="col-md-2" style="border: 2px lightgrey solid; position: relative; left: 200px;">
+          <img src = "{{mars_scrape.hemi_image_title[2]['img_url']}}" style="width: 100%;" alt = "hemisphere">
+          <h4 style="margin-bottom: 20px; margin-top: 25px; font-weight: bold; width: 90%;">{{mars_scrape.hemi_image_title[2]['title']}}</h4>
+        </div>
+        <div class="col-md-2" style="border: 2px lightgrey solid; position:relative; left: 250px;">
+          <img src = "{{mars_scrape.hemi_image_title[3]['img_url']}}" style="width: 100%;" alt = "hemisphere">
+          <h4 style="margin-bottom: 20px; margin-top: 25px; font-weight: bold; width: 90%;">{{mars_scrape.hemi_image_title[3]['title']}}</h4>
+        </div>
+      </div>
+      <div class="row">
+
+        <hr style="width: 100%; height:1px;border-width:0;color:lightgray;background-color:lightgray; margin-bottom: 40px; margin-top: 40px;">
+      </div>
+  
+    </div>
+  
+  </body>
+  
+  </html>
